Fix validation forms

--- a/conference-mvc/src/main/resources/messages_de.properties
+++ b/conference-mvc/src/main/resources/messages_de.properties
@@ -3,3 +3,6 @@ name=Name
 
 # Buttons
 save.changes=Änderungen speichern
+
+# Validations
+NptEmpty.registration.name=Der Name darf nicht leer sein, bitte ausfüllen
