--- a/conference-mvc/src/main/resources/messages_es.properties
+++ b/conference-mvc/src/main/resources/messages_es.properties
@@ -3,3 +3,6 @@ name=Nombre
 
 # Buttons
 save.changes=Guardar cambios
+
+# Validations
+NptEmpty.registration.name=El nombre no puede estar vacio, por favor rellenelo
